--- a/partials/detail.html
+++ b/partials/detail.html
@@ -61,7 +61,7 @@
                                 </li>
                                 <li class="collection-item">
                                     <div>
-                                        {{ post.type }} | <i>{{ post.tags }}</i>
+                                        <i>{{ post.tags }}</i>
                                         <span class="secondary-content">
                                             <i class="material-icons">label</i>
                                         </span>
@@ -87,7 +87,7 @@
                                 </li>
                                 <li class="collection-item">
                                     <div>
-                                        {{ post.description }} 
+                                        <b>{{ post.type }}:</b>{{ post.description }} 
                                         <span class="secondary-content">
                                             <i class="material-icons">subject</i>
                                         </span>
