--- a/partials/home.html
+++ b/partials/home.html
@@ -115,7 +115,7 @@
               <option value="Sports/Recreation">Sports</option>
             </select> 
         </div>
-        <div class="col s12 m4 offset-m2">
+        <div class="col s12 m4">
             <select ng-model="query.type" class="browser-default">
                 <option value="Volunteering">Volunteering</option>
                 <option value="Community Event">Community Event</option>
