--- a/partials/home.html
+++ b/partials/home.html
@@ -89,6 +89,7 @@
   <div class="container">
     <p></p>
     <div class="row" ng-init="query.type = 'Volunteering'">
+      <div class="card-panel">
         <div class="col s12 m6 offset-m3">
             <div class="input-field">
               <i class="material-icons prefix">search</i>
@@ -122,6 +123,7 @@
                 <option value="Open Positions">Open Positions</option>
             </select> 
         </div>
+      </div>
     </div>
     <div class="row" id="feed">
         <div class="col s12 m6 offset-m3">
