--- a/partials/home.html
+++ b/partials/home.html
@@ -89,14 +89,14 @@
   <div class="container">
     <p></p>
     <div class="row" ng-init="query.type = 'Volunteering'">
-        <div class="col s12 m6 offset-m3">
+        <div class="col s12 m8 offset-m2">
               <div class="input-field">
                 <i class="material-icons prefix">search</i>
                 <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
                 <label for="icon_prefix">Event name, location, etc...</label>
               </div>
         </div>
-        <div class="col s6 m3 offset-m3">
+        <div class="col s6 m4 offset-m2">
               <select ng-model="query.tags" class="browser-default">
                 <option value="">All</option>
                 <option value="Animals">Animals</option>
@@ -115,7 +115,7 @@
                 <option value="Sports/Recreation">Sports</option>
               </select> 
         </div>
-        <div class="col s6 m3">
+        <div class="col s6 m4">
               <select ng-model="query.type" class="browser-default">
                   <option value="Volunteering">Volunteering</option>
                   <option value="Community Event">Community Event</option>
@@ -125,10 +125,10 @@
     </div>
     <hr>
     <div class="row" id="feed">
-        <div class="col s12 m6 offset-m3">
+        <div class="col s12 m8 offset-m2">
             <div ng-show="!filtered.length && !loading" class="card-panel">
-              <span>No posts available.
-              </span>
+              <h6 class="center-align">No posts available.
+              </h6>
             </div>
             <div ng-show="loading">
               <div class="progress">
