--- a/partials/post.html
+++ b/partials/post.html
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required || postForm.location.$error.required || postForm.description.$error.required || postForm.startTime.$error.required || postForm.endTime.$error.required || postForm.tags.$error.required || postForm.link.$error.required" ng-disabled="postForm.title.$error.required || postForm.startDate.$error.required || postForm.endDate.$error.required || postForm.location.$error.required || postForm.description.$error.required || postForm.startTime.$error.required || postForm.endTime.$error.required || postForm.tags.$error.required || postForm.link.$error.required || postForm.type.$error.required" ng-click="post()" class="waves-effect waves-green btn">Post</button>
+          <button ng-hide="!show" ng-disabled="!show" ng-click="post()" class="waves-effect waves-green btn">Post</button>
         </form>
      </div>
   </div>
