--- a/partials/post.html
+++ b/partials/post.html
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div id="us"></div>
-          <button ng-hide="!show" ng-disabled="!show" ng-click="post()" class="waves-effect waves-green btn">Post</button>
+          <button ng-show="valid" ng-disabled="!valid" ng-click="post()" class="waves-effect waves-green btn">Post</button>
         </form>
      </div>
   </div>
