--- a/partials/home.html
+++ b/partials/home.html
@@ -98,6 +98,7 @@
         </div>
         <div class="col s6 m4 offset-m2">
               <select ng-model="query.type" class="browser-default">
+                  <option value="">All Types</option>
                   <option value="Volunteering">Volunteering</option>
                   <option value="Community Event">Community Event</option>
                   <option value="Open Positions">Open Positions</option>
@@ -105,7 +106,7 @@
         </div>
         <div class="col s6 m4">
               <select ng-model="query.tags" class="browser-default">
-                <option value="">All</option>
+                <option value="">All Tags</option>
                 <option value="Animals">Animals</option>
                 <option value="Art/Culture">Art/Culture</option>
                 <option value="Children">Children</option>
