--- a/partials/home.html
+++ b/partials/home.html
@@ -88,7 +88,7 @@
   </div>
   <div class="container">
     <p></p>
-    <div class="row" ng-init="query.type = 'Volunteering'">
+    <div class="row">
         <div class="col s12 m8 offset-m2">
               <div class="input-field">
                 <i class="material-icons prefix">search</i>
