--- a/partials/user.html
+++ b/partials/user.html
@@ -60,6 +60,10 @@
                             <td>{{ user.email }}</td>
                           </tr>
                           <tr>
+                            <td><b>Website</b></td>
+                            <td><a href="{{ user.website }}">{{ user.website }}</a></td>
+                          </tr>
+                          <tr>
                             <td><b>Phone Number</b></td>
                             <td>{{ user.phone }}</td>
                           </tr>
