--- a/partials/profile.html
+++ b/partials/profile.html
@@ -75,6 +75,6 @@
               <label class="active" for="description">Description</label>
             </div>
           </div>
-          <button ng-hide="profileForm.name.$error.required || profileForm.phone.$error.required || profileForm.description.$error.required || profileForm.image.$error.required" ng-click="save()" ng-disabled="profileForm.name.$error.required || profileForm.phone.$error.required || profileForm.description.$error.required || profileForm.image.$error.required" ng-click="save()" class="waves-effect waves-green btn">Save</button>
+          <button ng-hide="profileForm.name.$error.required || profileForm.phone.$error.required || profileForm.description.$error.required || profileForm.image.$error.required" ng-click="save()" ng-disabled="profileForm.name.$error.required || profileForm.phone.$error.required || profileForm.description.$error.required || profileForm.image.$error.required || profileForm.website.$error.required" ng-click="save()" class="waves-effect waves-green btn">Save</button>
      </div>
   </div>
