--- a/partials/contact.html
+++ b/partials/contact.html
@@ -87,5 +87,22 @@
     </div>
   </div>
   <div class="container">
-      Contact
+      <br/>
+      <table class="striped">
+        <thead>
+          <tr>
+              <th>Email</th>
+              <th>Phone Number</th>
+              <th>Location</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>fremontbridge15@gmail.com</td>
+            <td>510-386-1102</td>
+            <td>Fremont, CA</td>
+          </tr>
+        </tbody>
+      </table>
   </div>
