--- a/partials/contact.html
+++ b/partials/contact.html
@@ -88,7 +88,9 @@
   </div>
   <div class="container">
       <br/>
-      <table class="striped">
+      <h1>Contact Us!</h1>
+      <hr>
+      <table class="striped z-depth-1 centered">
         <thead>
           <tr>
               <th>Email</th>
