--- a/partials/about.html
+++ b/partials/about.html
@@ -87,5 +87,8 @@
     </div>
   </div>
   <div class="container">
-      About
+      <br>
+      <div class="z-depth-1 center-align">
+        Bridge is a cross platform mobile application that efficiently and conveniently connects nonprofit organizations with potential volunteers in their respective locations.      
+      </div>
   </div>
