--- a/partials/about.html
+++ b/partials/about.html
@@ -87,8 +87,13 @@
     </div>
   </div>
   <div class="container">
-      <br>
-      <div class="z-depth-1 center-align">
-        Bridge is a cross platform mobile application that efficiently and conveniently connects nonprofit organizations with potential volunteers in their respective locations.      
+      <br/>
+      <div class="row">
+        <div class="col s12">
+          <div class="card-panel z-depth-1">
+            Bridge is a web platform that allows non profit organizations and school clubs in the community to post their upcoming events on an organized, easy to access newsfeed. Prospective student volunteers and attendees can then view these posts based on their interests and locations and join these events directly. Our application will facilitate greatly in event management and coordination and will help advertise events to prospective volunteers.   
+            </span>
+          </div>
+        </div>
       </div>
   </div>
