--- a/partials/about.html
+++ b/partials/about.html
@@ -90,8 +90,9 @@
       <br/>
       <div class="row">
         <div class="col s12">
+          <h5 class="center-align">About us:</h5> <br>
+
           <div class="card-panel z-depth-1 flow-text">
-            <span class="center-align">About us:</span> <br>
             Bridge is a web platform that allows non profit organizations and school clubs in the community to post their upcoming events on an organized, easy to access newsfeed. Prospective student volunteers and attendees can then view these posts based on their interests and locations and join these events directly. Our application will facilitate greatly in event management and coordination and will help advertise events to prospective volunteers.   
             </span>
           </div>
