--- a/css/index.css
+++ b/css/index.css
@@ -78,3 +78,6 @@ hr {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+.header {
+        font-family: "Harabara";
+}
