--- a/partials/contact.html
+++ b/partials/contact.html
@@ -88,6 +88,7 @@
   </div>
   <div class="container">
       <br/>
+      <h5 class="center-align header">Contact us</h5> <br>
       <table class="striped z-depth-1 centered">
         <thead>
           <tr>
