--- a/partials/home.html
+++ b/partials/home.html
@@ -89,15 +89,20 @@
   <div class="container">
     <p></p>
     <div class="row">
-        <div class="col s12 m8 offset-m2">
+        <div class="col s10 m7 offset-m2">
               <div class="input-field">
                 <i class="material-icons prefix">search</i>
-                <input id="icon_prefix" ng-model="query.$" type="text" class="validate">
-                <label for="icon_prefix">Event name, location, etc...</label>
+                <input id="icon_prefix" ng-model="query.$" type="text" class="validate ng-pristine ng-valid ng-touched">
+                <label for="icon_prefix" class="">Event name, location, etc...</label>
               </div>
         </div>
+        <div class="col s2 m1">
+         <a class="btn-floating waves-effect waves-light grey darken-3" style="
+            margin-top: 14px;
+        "><i class="material-icons">settings</i></a>
+        </div>
         <div class="col s6 m4 offset-m2">
-              <select ng-model="query.type" class="browser-default">
+              <select ng-model="query.type" class="browser-default ng-pristine ng-untouched ng-valid">
                   <option value="">All Types</option>
                   <option value="Volunteering">Volunteering</option>
                   <option value="Community Event">Community Event</option>
@@ -105,7 +110,7 @@
               </select> 
         </div>
         <div class="col s6 m4">
-              <select ng-model="query.tags" class="browser-default">
+              <select ng-model="query.tags" class="browser-default ng-pristine ng-untouched ng-valid">
                 <option value="">All Tags</option>
                 <option value="Animals">Animals</option>
                 <option value="Art/Culture">Art/Culture</option>
