--- a/partials/home.html
+++ b/partials/home.html
@@ -91,7 +91,7 @@
       <h4>Search Filter</h4>
       <div class="divider"></div>
       <p></p>
-
+      <div class="row">
         <div class="col s6 m4 offset-m2">
               <select ng-model="query.type" class="browser-default ng-pristine ng-untouched ng-valid">
                   <option value="">All Types</option>
@@ -119,7 +119,7 @@
                 <option value="Sports/Recreation">Sports</option>
               </select> 
         </div>
-      </form>
+      </div>
     </div>
     <div class="modal-footer">
       <a class=" modal-action modal-close waves-effect waves-green btn-flat">Back</a>
