--- a/partials/home.html
+++ b/partials/home.html
@@ -171,3 +171,8 @@
         </div>
     </div>
   </div>
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large">
+      <i class="large material-icons">search</i>
+    </a>
+  </div>
