--- a/partials/home.html
+++ b/partials/home.html
@@ -171,7 +171,7 @@
         </div>
     </div>
   </div>
-  <div class="fixed-action-btn hide-on-small-only" style="bottom: 45px; right: 24px;">
+  <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
     <a class="btn-floating btn-large">
       <i class="large material-icons">search</i>
     </a>
