--- a/partials/home.html
+++ b/partials/home.html
@@ -131,8 +131,8 @@
         <div class="col s10 m7 offset-m2">
               <div class="input-field">
                 <i class="material-icons prefix">search</i>
-                <input id="icon_prefix" ng-model="query.$" type="text" class="validate ng-pristine ng-valid ng-touched">
-                <label for="icon_prefix" class="">Event name, location, etc...</label>
+                <input id="searchinput" ng-model="query.$" type="text" class="validate ng-pristine ng-valid ng-touched">
+                <label for="searchinput" class="">Event name, location, etc...</label>
               </div>
         </div>
         <div class="col s2 m1">
@@ -172,7 +172,7 @@
     </div>
   </div>
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large">
+    <a class="btn-floating btn-large" ng-click="searchtop">
       <i class="large material-icons">search</i>
     </a>
   </div>
