--- a/partials/home.html
+++ b/partials/home.html
@@ -172,7 +172,7 @@
     </div>
   </div>
   <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-    <a class="btn-floating btn-large" ng-click="searchtop">
+    <a class="btn-floating btn-large" ng-click="searchtop()">
       <i class="large material-icons">search</i>
     </a>
   </div>
