--- a/partials/home.html
+++ b/partials/home.html
@@ -125,7 +125,7 @@
       <a class=" modal-action modal-close waves-effect waves-green btn-flat">Back</a>
     </div>
   </div>
-  <div class="container">
+  <div class="container" scroll>
     <p></p>
     <div class="row">
         <div class="col s10 m7 offset-m2">
