--- a/partials/home.html
+++ b/partials/home.html
@@ -125,7 +125,7 @@
       <a class=" modal-action modal-close waves-effect waves-green btn-flat">Back</a>
     </div>
   </div>
-  <div class="container" scroll>
+  <div class="container">
     <p></p>
     <div class="row">
         <div class="col s10 m7 offset-m2">
@@ -142,7 +142,7 @@
         </div>
     </div>
     <hr>
-    <div class="row" id="feed">
+    <div class="row" id="feed" scroll>
         <div class="col s12 m8 offset-m2">
             <div ng-show="!filtered.length && !loading" class="card-panel">
               <h6 class="center-align">No posts available.
