--- a/partials/about.html
+++ b/partials/about.html
@@ -93,7 +93,8 @@
           <h5 class="center-align header">About us</h5> <br>
 
           <div class="card-panel z-depth-1 flow-text">
-            Bridge is a web platform that allows non profit organizations and school clubs in the community to post their upcoming events on an organized, easy to access newsfeed. Prospective student volunteers and attendees can then view these posts based on their interests and locations and join these events directly. Our application will facilitate greatly in event management and coordination and will help advertise events to prospective volunteers.   
+           Bridge is a platform that allows organizations in the community to post their upcoming events and position openings on an organized, easy to access feed. Prospective student volunteers and attendees can view these posts based on their interests and locations and join these events directly.
+           We facilitate event management—No more convoluted email lists, hectic private groups, or lengthy threads. With opportunities right at your fingertips, getting involved has never been easier.
           </div>
         </div>
       </div>
